--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye</title>
   </head>
+
   <body>
-    <header>
+    <header role="banner">
         <img src="assets/images/logo.png" class="logo" />
         <h1>Nos photographes</h1>
     </header>
+
     <main id="main">
         <div class="photographer_section"></div>
     </main>
+
     <script src="scripts/factories/photographer.js"></script>
     <script src="scripts/pages/index.js"></script>
   </body>
