--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
-    <link href="./css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="./assets/favicon.png">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye</title>
   </head>
 
   <body>
-    <header role="banner">
-        <a href="./index.html">
-          <img src="./assets/images/logo.png" alt="Fisheye Home page" class="logo" />
+    <header class="header" role="banner" aria-label="En-tête de la page">
+        <a href="index.html" class="header__link" title="Lien vers la page d'acceuil" role="link" >
+          <img src="assets/images/logo.png" alt="Logo de FishEye" class="header__logo" />
         </a>
-        <h1>Nos photographes</h1>
+        <h1 class="header__title">Nos photographes</h1>
     </header>
 
-    <main id="main">
-        <div class="photographer_section"></div>
+    <main class="main" role="main" aria-label="Contenu principale de la page">
+        <section class="cards"></section>
     </main>
 
     <script src="./scripts/factories/photographer.js"></script>
