--- a/photographer.html
+++ b/photographer.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
-    <link href="./css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="./assets/favicon.png">
+    <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye - photographe </title>
+    <title>Fisheye - photographe</title>
   </head>
 
   <body>
-    <header role="banner">
-      <a href="./index.html">
-        <img src="./assets/images/logo.png" alt="Fisheye Home page" class="logo" />
+    <header class="header" role="banner" aria-label="En-tête de la page">
+      <a href="./index.html" class="header__link" title="Lien vers la page d'accueil" role="link">
+        <img src="assets/images/logo.png" alt="Logo de FishEye" class="header__logo" />
       </a>
     </header>
 
-    <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-      </div>
+    <main class="main" role="main" aria-label="Contenu pricipale de la page">
+      <section class="photographer"></section>
+      <section class="medias"></section>
     </main>
 
     <div id="contact_modal">
@@ -37,6 +36,8 @@
 				</form>
 			</div>
 		</div>
+    <script src="./scripts/factories/photographer.js"></script>
+    <script src="./scripts/factories/media.js"></script>
     <script src="./scripts/pages/photographer.js"></script>
     <script src="./scripts/utils/contactForm.js"></script>
   </body>
