--- a/photographer.html
+++ b/photographer.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="header" role="banner" aria-label="En-tête de la page">
-      <a href="./index.html" class="header__link" title="Lien vers la page d'accueil" role="link">
+      <a href="./index.html" class="header__link" title="Lien vers la page d'accueil" role="link" tabindex="0">
         <img src="assets/images/logo.png" alt="Logo de FishEye" class="header__logo" />
       </a>
     </header>
