--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header" role="banner" aria-label="En-tête de la page">
         <a href="index.html" class="header__link" title="Lien vers la page d'acceuil" role="link" >
-          <img src="assets/images/logo.png" alt="Logo de FishEye" class="header__logo" />
+          <img src="assets/images/logo.png" alt="" class="header__logo"/>
         </a>
         <h1 class="header__title">Nos photographes</h1>
     </header>
