problem with multiple id corrected

--- a/photographer.html
+++ b/photographer.html
@@ -52,17 +52,17 @@
           <div class="data">
 						<label for="lastname" class="data__label">Nom</label>
 						<input type="text" id="lastname" name="lastname" class="data__input" required aria-describedby="lastname-desc"/>
-            <p id="firstname-desc" class="data__desc">Entrez votre nom</p>
+            <p id="lastname-desc" class="data__desc">Entrez votre nom</p>
 					</div>
           <div class="data">
 						<label for="email" class="data__label">@mail</label>
 						<input type="email" id="email" name="email" class="data__input" required aria-describedby="email-desc"/>
-            <p id="firstname-desc" class="data__desc">Entrez votre adresse email</p>
+            <p id="email-desc" class="data__desc">Entrez votre adresse email</p>
 					</div>
           <div class="data">
 						<label for="message" class="data__label">Votre message</label>
 						<textarea type="text" id="message" name="message" class="data__input" required aria-describedby="message-desc"></textarea>
-            <p id="firstname-desc" class="data__desc">Entrez votre message</p>
+            <p id="message-desc" class="data__desc">Entrez votre message</p>
 					</div>
           <button class="contact_button form__button" aria-label="Envoyer le formulaire de contact">Envoyer</button>
 				</form>
